--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     font-family: monospace, Hack, Ubuntu;
     margin: auto;
     text-align: center;
-    background-color: #222222;
+    background-color: #151515;
     color: white;
 }
 
@@ -21,7 +21,7 @@ header, footer {
     background-color: #2c2c2c;
     padding: 10px 20px 10px 20px;
     display: inline-block;
-    box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.25);
+    box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
 .container img {
@@ -57,7 +57,7 @@ header, footer {
     background-color: #2c2c2c;
     display: inline-block;
     padding: 20px;
-    box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.25);
+    box-shadow: 10px 10px 0px 0px rgba(0,0,0,0.5);
 }
 
 .project .title {
