--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,12 @@ body {
     margin: auto;
     text-align: center;
     background-color: #151515;
-    color: white;
+    color: navajowhite;
+}
+
+a {
+    text-decoration: none;
+    color: #ff8300;
 }
 
 header, footer {
@@ -17,8 +22,12 @@ header, footer {
     margin: auto;
 }
 
+#title {
+    color: white;
+}
+
 .container {
-    background-color: #2c2c2c;
+    background-color: #2b2826;
     padding: 10px 20px 10px 20px;
     display: inline-block;
     box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.5);
@@ -32,8 +41,9 @@ header, footer {
     width: 50px;
 }
 
-#title {
+h1, h2, h3 {
     text-align: center;
+    color: #ffaa07;
 }
 
 #contact {
