--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,12 @@ header, footer {
     height: 50px;
 }
 
+article {
+    width: 700px;
+    margin: auto;
+    text-align: justify;
+}
+
 #main-summary {
     max-width: 900px;
     margin: auto;
@@ -40,6 +46,11 @@ header, footer {
     width: 50px;
 }
 
+ul {
+    padding-left: 15px;
+    margin: 0;
+}
+
 h1, h2, h3 {
     text-align: center;
     color: #ffaa07;
@@ -61,6 +72,24 @@ h1, h2, h3 {
     height: 12px;
 }
 
+/* Posts */
+#posts {
+    max-width: 400px;
+}
+
+#posts h4 {
+    display: inline-block;
+}
+
+.code {
+    text-align: left;
+    min-width: 500px;
+    font-size: 12pt;
+    margin: auto;
+    display: block;
+}
+
+
 /* Project */
 .project {
     background-color: #2c2c2c;
@@ -78,6 +107,7 @@ h1, h2, h3 {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 
 /* Contact */
 .contact {
